# flying-circus

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  TODO.txt  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.py
contrib/: CloudFormationResourceSpecification.json
docs/: conf.py  ec2_example.py  getting_started.rst  history.rst  index.rst  introduction.rst  licence-notes.rst  logging.rst  spelling_wordlist.txt  usage.rst
docs/developers/: planning.rst  standards.rst
docs/internal_development/: release.rst  standards.rst
flyingcircus/: core.py
flyingcircus/services/: s3.py
oldsrc/fcspike/: core.py
oldsrc/fcspike/_raw/: __init__.py  iam.py
src/fcspike/: __init__.py  core.py  raw_test.py
src/fcspike/service/: __init__.py
src/flyingcircus/: __init__.py  _about.py  config.py  core.py  exceptions.py  function.py  intrinsic_function.py  yaml.py
src/flyingcircus/_raw/: __init__.py  accessanalyzer.py  acmpca.py  amazonmq.py  amplify.py  apigateway.py  ce.py  (+122 more)
tests/: __init__.py  conftest.py  integration_test.py  intrinsic_function_test.py  pyyaml_helper.py  raw_test.py  service_test.py  test_package.py  validation_helper.py  yaml_test.py
tests/config/: integration_test_user.yaml
tests/core_test/: awsobject_test.py  common.py  emptiness_test.py  flattened_object_test.py  output_test.py  parameter_test.py  resource_test.py  stack_test.py  test_yaml_output.py
tests/service_test/: __init__.py  autoscaling_test.py  lambda_test.py
tools/: create_raw_modules.py  raw_module.py.jinja2  service_module.py.jinja2
(+132 files in other folders)
